# libblepp

./: CMakeLists.txt  Makefile.in  NIMBLE_BUILD.md  README.md  configure  configure.ac  configure~
blepp/: advertising.h  att.h  bleattributedb.h  bleclienttransport.h  blegattserver.h  blepp_config.h  blestatemachine.h  bletransport.h  bluez_client_transport.h  bluez_transport.h  gatt_services.h  lescan.h  nimble_client_transport.h  nimble_transport.h  uuid.h
docs/: ATBM_IMPLEMENTATION_COMPLETE.md  ATBM_IOCTL_API.md  BLE_SERVER_IMPLEMENTATION_GUIDE.md  BUILD_OPTIONS.md  CLIENT_TRANSPORT_ABSTRACTION.md  CMAKE_BUILD_GUIDE.md  CONDITIONAL_COMPILATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  SERVER_IMPLEMENTATION_README.md
examples/: gatt_server.cc  lescan.cc  lescan_simple.cc  lescan_transport.cc
src/: att.cc  bleattributedb.cc  bleclienttransport.cc  bledevice.cc  blegattserver.cc  blestatemachine.cc  bluez_client_transport.cc  bluez_transport.cc  lescan.cc  lescan.cc.bak  nimble_client_transport.cc  nimble_transport.cc  uuid.cc
tests/: test_scan.cc  test_transport.cc
